# ModelTransfer-TDD

./: .gitignore  LICENSE  README.md  main.py  problem.md  pyproject.toml
Landing/Precision/: precision.ipynb  test.ipynb
Landing/Sharding/: commuicate.py  communicate.ipynb  mat_mul.py  sharding.ipynb
Mimo-V2-Flash/: config.py  modeling.py  params.py
Mimo-V2-Flash/jax_mimo/: __init__.py  analyze.md  attention.py  config.py  layers.py  masking.py  model.py  modeling.py  moe.py  params.py  rope.py  smoke_test_jax.py
Mimo-V2-Flash/jax_mimo/.tmp/: 1.py
Mimo-V2-Flash/jax_mimo/test/: run_big_model.py  run_model.py  test_output_mimo.py
Mimo-V2-Flash/mimo_jax/: __init__.py  params.py
Mimo-V2-Flash/mimo_jax/config/: config.json  tokenizer_config.json
Mimo-V2-Flash/mimo_jax/test/: run_big_model.py  run_model.py  test_output_mimo.py
Mimo-V2-Flash/mimo_torch/: smoke_test.py
Mimo-V2-Flash/pytorch/: configuration_mimo_v2_flash.py  modeling_mimo_v2_flash.py  smoke_test.py  smoke_test_tiny.py
Mimo-V2-Flash/test/: __init__.py  run_model.py  test_decoder0.py  test_decoder1_attention.py  test_embedding.py  test_full_forward_truncated.py  test_moe_expert_subset.py  test_moe_gate.py  test_output_mimo.py  test_true_weight.py
